# HVM

./: .gitignore  BUILDING.md  Cargo.nix  Cargo.toml  GUIDE.md  HOW.md  JavaScript.md  LICENSE  NIX.md  PAPER.md  POST.md  README.md  WHITEPAPER.md  WHY_HOVM_MATTERS.md  askama.toml  build.rs  flake.nix  io.hvm  prep.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: bench.yml  build.yml  cargo.yml  checks.yml  ci.yml  clippy.yml  delete-cancelled.yml  nix.yml  rust_ci.yml  rustfmt.yml  tests.yml
bench/: BENCH.md  README.md  benchmark.js  gencharts.js  result.json  run.js  test.sh
bench/BinaryTreeSum/: main.hovm  main.hs
bench/Composition/: README.md  compose_id.hovm  compose_id.hs  compose_inc_ctr.hovm  compose_inc_ctr.hs  compose_inc_lam.hovm  compose_inc_lam.hs  compose_inc_u32.hovm  compose_inc_u32.hs  compose_u32_inc.hovm  compose_u32_inc.hs  main.c  main.hovm  main.hs  main.js  main.rs
bench/Fibonacci/: README.md  fibonacci.c  fibonacci.hovm  fibonacci.hs  main.c  main.hovm  main.hs  main.js  main.rs  test.txt
bench/FunctionExponentiation/: funexp.hovm  funexp.hs
bench/LambdaArithmetic/: main.hovm  main.hs  main.hvm  main.js
bench/ListFold/: main.hovm  main.hs  main.hvm  main.js  main.rs
bench/MergeSort/: main.hovm
bench/QuickSort/: README.md  main.hovm  main.hs  main.hvm  main.js  main.rs  quicksort.hovm  quicksort.hs  test.txt
bench/RedBlack/: main.hvm
bench/TreeSum/: main.hovm  main.hs  main.hvm  main.js  main.rs  test.txt  treesum.hovm  treesum.hs
bench/_results_/: Composition.csv  LambdaArithmetic.csv  ListFold.csv  QuickSort.csv  TreeSum.csv
bench/binary_recursion/: binary_recursion.hovm  (+1 more)
benches/: gencharts.js  runtime.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: README.md  debug_log.hvm  dependent-type-checker.hvm  echo.hvm  greet.hvm  hello.hvm  hvm  infinite-list-with-copatterns.hvm  infinite-list-with-the-y-combinator.hvm  infinite-list.hvm  input_output.hvm  javascript.js  normalization-by-evaluation.hvm  simple-list-sum.hvm  to-lower.hvm
guide/: HOW.md  PARALLELISM.md  README.md
hvm/: Cargo.toml
lib/: default-platform.c  hvm-api.h
paper/: HVM2.typst  PAPER.typst  README.md  inet.typ
profiler/: Cargo.toml  README.md
profiler/src/: main.rs
src/: api.rs  ast.rs  builder.rs  cli.rs  cmp.rs  common.rs  compilable.rs  compiled-cli.rs  compiled.rs  compiler.rs  convert.rs  dynamic.rs  dynfun.rs  get_shared_mem.cu  hvm.c  hvm.cu  hvm.cuh  hvm.h  hvm.rs  hvm_syntax.lalrpop  interop.rs  io.c  io.cu  jit_wip.rs  lambolt.rs  language.rs  lib.rs  main.rs  makefile  old_ast.rs  parser.rs  polyfills.rs  prelude.rs  readback.rs  readback.ts  rope.rs  rulebook.rs  run.c  run.cu  runtime.c  (+4 more)
templates/: runtime.c
tests/: arbitrary.rs  interpreter.rs  run.rs  runtime.rs  test_cli.py
wasm/: build.sh  publish.sh
(+289 files in other folders)
