[package]
name = "hvm"
version = "2.0.17"
edition = "2021"
build = "build.rs"
description = "A massively parallel, optimal functional runtime in Rust."
license = "Apache-2.0"

[lib]
name = "hvm"
path = "src/lib.rs"

[dependencies]
TSPL = "0.0.12"
clap = "4.5.2"
highlight_error = "0.1.1"
num_cpus = "1.0"

[build-dependencies]
cc = "1.0"
num_cpus = "1.0"

[features]
default = []
# C and CUDA features are determined during build
c = []
cuda = []

[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
