[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hovm = { path = "../" }
pprof = { version = "0.4", features = ["flamegraph", "protobuf"] }

[profile.bench]
opt-level = 3
debug = 2
